platform/kubernetes/base/prometheus/kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: shopsphere-monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/component: cluster-state-exporter
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
      protocol: TCP
