platform/kubernetes/base/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: shopsphere-monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: metrics-server
  ports:
    - name: http
      port: 9090
      targetPort: http
      protocol: TCP
